# profit-sentinel-saas

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  ARCHITECTURE_MAP.md  AUDIT_REPORT.md  AWS_RESOURCES.md  DATA_PERSISTENCE.md  Dockerfile.gpu  ENCRYPTION_AUDIT.md  ENV_AUDIT.md  FIXES_APPLIED.md  GA.py  GAPS.md  IE.py  LICENSE.md  MIGRATION_PLAN.md  PRE_STRIPE_CHECKLIST.md  PRIVACY_CLAIM_VERIFICATION_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_ISSUES.md  SPRINT_2_SECURITY_HARDENING.md  STRIPE_INTEGRATION_PLAN.md  UX_AUDIT.md  docker-compose.local.yml  docker-compose.yml  gigachad_sim.py  inventory_report.html  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tuned.py  vercel.json
_legacy/: README.md
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/src/: config.py  dependencies.py  main.py
apps/api/src/middleware/: __init__.py  auth.py
apps/api/src/routes/: __init__.py  analysis.py  billing.py  contact.py  diagnostic.py  employee.py  health.py  metrics.py  premium.py  privacy.py  repair.py  reports.py  uploads.py
apps/api/src/services/: analysis.py  anonymization.py  billing.py  email.py  file_validator.py  grok_vision.py  mapping.py  s3.py  virus_scan.py
apps/api/src/utils/: column_mappings.py
apps/api/tests/: __init__.py  conftest.py  test_column_adapter.py  test_employee_routes.py  test_grok_vision_guardrails.py  test_repair_routes.py  test_result_adapter.py  test_routes.py  test_services.py
backend/: .dockerignore  Dockerfile  requirements.txt
config/: hybrid_pipeline_config.yaml
docs/: ALWAYS_ON_AGENT_ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BENCHMARKS.md  DASHBOARD_SPEC.md  ENVIRONMENT_SEPARATION.md  GPU_DEPLOYMENT_ARCHITECTURE.md  GROK_CHAT_FORENSIC_ANALYSIS.md  (+17 more)
profit-sentinel-rs/python/: pyproject.toml  requirements.txt
profit-sentinel-rs/python/scripts/: generate_fixtures.py
profit-sentinel-rs/python/sentinel_agent/: __init__.py  __main__.py  analysis_store.py  anonymizer.py  api_keys.py  api_models.py  category_mix.py  column_adapter.py  config_schema.py  coop_intelligence.py  coop_models.py  counterfactual.py  cross_report.py  delegation.py  diagnostics.py  digest.py  digest_scheduler.py  dual_auth.py  email_service.py  engine.py  inventory_health.py  llm_layer.py  mapping_service.py  models.py  pdf_report.py  pos_integrations.py  predictive_alerts.py  rate_limits.py  result_adapter.py  s3_service.py  sidecar.py  sidecar_config.py  subscription_store.py  symbolic_reasoning.py  turnstile.py  upload_routes.py  vendor_assist.py  vendor_rebates.py  vendor_scoring.py
profit-sentinel-rs/python/sentinel_agent/adapters/: __init__.py  base.py  bridge.py  detection.py  sales.py
profit-sentinel-rs/python/sentinel_agent/adapters/ace/: __init__.py
profit-sentinel-rs/python/sentinel_agent/adapters/do_it_best/: __init__.py
profit-sentinel-rs/python/sentinel_agent/adapters/generic_pos/: __init__.py  inventory.py
profit-sentinel-rs/python/sentinel_agent/adapters/orgill/: __init__.py  po_parser.py
profit-sentinel-rs/python/sentinel_agent/adapters/pike_creek/: __init__.py  inventory.py
profit-sentinel-rs/python/sentinel_agent/routes/: __init__.py  actions.py  agent_briefing.py  analyses.py  api_keys.py  config.py  counterfactual.py  dashboard.py  diagnostic.py  digest.py  eagle_eye.py  explain.py  findings.py  health.py  org_stores.py  organizations.py  pos.py  predictions.py  regions.py  state.py  stores.py  tasks.py  transfers.py  vendor.py
profit-sentinel-rs/python/sentinel_agent/services/: briefing_generator.py
profit-sentinel-rs/python/sentinel_agent/world_model/: __init__.py  battery.py  config.py  core.py  pipeline.py  rust_algebra.py  transfer_matching.py
profit-sentinel-rs/python/sentinel_agent/world_model/tests/: test_battery_driven.py  test_dead_stock_config.py  test_pipeline_next.py  test_real_inventory.py  test_transfer_matching.py
profit-sentinel-rs/python/static/: app.js  styles.css
profit-sentinel-rs/python/tests/: test_adapters.py  test_analysis_store.py  test_api_keys.py  test_api_models.py  test_bridge.py  test_category_mix.py  test_coop_integration.py  test_coop_intelligence.py  test_coop_models.py  test_coop_rendering.py  test_cross_report.py  test_delegation.py  test_diagnostics.py  test_digest_scheduler.py  test_dual_auth.py  test_email_service.py  test_integration.py  test_inventory_health.py  test_llm_layer.py  test_models.py  test_pike_creek_integration.py  test_pos_integration.py  test_pos_integrations.py  test_predictive_alerts.py  test_sales.py  test_security_regressions.py  test_sidecar.py  test_symbolic_reasoning.py  test_upload_routes.py  test_vendor_assist.py  test_vendor_rebates.py  test_vendor_scoring.py  test_world_model_pipeline_integration.py
profit-sentinel-rs/python/tests/fixtures/: inventory_sample.csv  sales_detail_sample.csv
profit-sentinel-rs/sentinel-pipeline/: Cargo.toml
profit-sentinel-rs/sentinel-pipeline/src/: candidate_pipeline.rs  filter.rs  hydrator.rs  inventory_loader.rs  issue_classifier.rs  lib.rs  query_hydrator.rs  scorer.rs  selector.rs  side_effect.rs  source.rs  types.rs  util.rs
profit-sentinel-rs/sentinel-pipeline/src/components/: digest_cache_side_effect.rs  dollar_impact_scorer.rs  glm_analytics_source.rs  low_impact_filter.rs  mod.rs  store_context_hydrator.rs  store_diversity_scorer.rs  time_range_query_hydrator.rs  top_k_selector.rs
profit-sentinel-rs/sentinel-pipeline/src/pipelines/: executive_digest.rs  mod.rs
profit-sentinel-rs/sentinel-pipeline/tests/: pipeline_integration.rs
profit-sentinel-rs/sentinel-server/: Cargo.toml
profit-sentinel-rs/sentinel-server/src/: main.rs
profit-sentinel-rs/sentinel-vsa/: Cargo.toml  pyproject.toml
profit-sentinel-rs/sentinel-vsa/examples/: benchmark.rs
profit-sentinel-rs/sentinel-vsa/src/: bundling.rs  codebook.rs  evidence.rs  lib.rs  math.rs  primitives.rs  py_bindings.rs  similarity.rs  thresholds.rs  world_model_ops.rs
profit-sentinel-rs/sentinel-vsa/tests/: correctness.rs
(+310 files in other folders)
