[project]
name = "profit-sentinel"
version = "1.0.0"
description = "Profit Sentinel - Retail Margin Forensics & Anomaly Detection SaaS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Profit Sentinel Team" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "packages/*/tests", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | node_modules
    | __pycache__
    | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E741",   # Ambiguous variable name (needed for mathematical code)
    "E722",   # Bare except (legacy code)
    "E402",   # Module import not at top (needed for optional imports)
    "N801",   # Class name should use CapWords (intentional for DSL-like APIs)
    "N802",   # Function name should be lowercase (Prolog-like factories)
    "N803",   # Argument name should be lowercase (math notation: X, B, L, etc.)
    "N806",   # Variable name should be lowercase (intentional patterns)
    "N812",   # Lowercase imported as non-lowercase (torch.nn.functional as F)
    "N815",   # Variable in class scope should not be mixedCase (test data)
    "F401",   # Import unused (needed for optional dependency checks in try/except)
    "F402",   # Import shadowed by loop variable (intentional)
    "UP007",  # Use X | Y for type annotations (compatibility)
    "UP035",  # typing.Dict deprecated (needed for Python 3.9 compatibility)
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "node_modules",
]

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]


[tool.poetry.dependencies]
pandas = "^2.3.3"
numpy = "^2.4.1"
matplotlib = "^3.10.8"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.5"
sqlalchemy = "^2.0.45"
alembic = "^1.18.1"
psycopg2-binary = "^2.9.11"
python-multipart = "^0.0.21"
openai = "^2.15.0"
supabase = "^2.27.2"
scipy = "^1.17.0"
pydantic-settings = "^2.12.0"
boto3 = "^1.42.29"
openpyxl = "^3.1.5"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
