[project]
name = "profit-sentinel"
version = "1.0.0"
description = "Profit Sentinel - Retail Margin Forensics & Anomaly Detection SaaS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Profit Sentinel Team" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "packages/*/tests", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | node_modules
    | __pycache__
    | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "node_modules",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # Line too long — handled by formatter (line-length = 88)
    "E741",   # Ambiguous variable name — needed for VSA math code (X, B, L)
    "E402",   # Module import not at top — needed for optional imports
    "N801",   # Naming: intentional for DSL-like APIs and Prolog-style factories
    "N802",   # Naming: Prolog-like factory functions
    "N803",   # Naming: math notation arguments (X, B, L)
    "N806",   # Naming: intentional patterns in mathematical code
    "N812",   # Naming: torch.nn.functional as F convention
    "N815",   # Naming: mixedCase in test data fixtures
    "F401",   # Unused import — needed for optional dependency checks in try/except
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "node_modules",
]

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]


[tool.poetry.dependencies]
pandas = "^2.3.3"
numpy = "^2.4.1"
matplotlib = "^3.10.8"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.5"
sqlalchemy = "^2.0.45"
alembic = "^1.18.1"
psycopg2-binary = "^2.9.11"
python-multipart = "^0.0.22"
openai = "^2.15.0"
supabase = "^2.27.2"
scipy = "^1.17.0"
pydantic-settings = "^2.12.0"
boto3 = "^1.42.29"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
