[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-agent"
version = "0.6.0"
description = "Python agent orchestration layer for Profit Sentinel"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]
sidecar = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-dotenv==1.2.1",
    "supabase==2.27.2",
    "pydantic-settings==2.12.0",
    "httpx==0.28.1",
    "boto3==1.42.32",
    "pandas==3.0.0",
    "numpy==2.4.1",
    "anthropic==0.76.0",
    "python-multipart==0.0.21",
    "reportlab>=4.0,<5.0",
]

[tool.setuptools.packages.find]
include = ["sentinel_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (run with -m slow, requires 5+ minutes)",
]
