[package]
name = "sentinel-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }
sentinel-vsa = { path = "../sentinel-vsa" }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
