[package]
name = "sentinel-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sentinel-pipeline = { path = "../sentinel-pipeline" }
sentinel-vsa = { path = "../sentinel-vsa" }
sentinel-bridge = { path = "../sentinel-bridge" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
env_logger = "0.11"
